# voxelio.rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  benchmark.md  cube_test.rs
.claude/: settings.local.json
crates/nbt-bench/: Cargo.toml  README.md
crates/nbt-bench/bench/: batch_processing_bench.rs  cube_palette_bench.rs  editing_bench.rs  nbt_comparison.rs  streaming_bench.rs
crates/nbt-bench/src/: main.rs
crates/nbt-compression/: Cargo.toml  README.md
crates/nbt-compression/src/: lib.rs
crates/nbt-compression/tests/: integration.rs
crates/nbt-core/: Cargo.toml  README.md
crates/nbt-core/bench/: batch_processing_bench.rs  editing_bench.rs
crates/nbt-core/examples/: cube_editor.rs  demo.rs
crates/nbt-core/src/: compression.rs  error.rs  io.rs  lib.rs  reader.rs  region.rs  snbt.rs  tag.rs  tests.rs
crates/nbt-region/: Cargo.toml  README.md
crates/nbt-region/examples/: region_demo.rs
crates/nbt-region/src/: chunk.rs  error.rs  lib.rs  region.rs
crates/nbt-snbt/: Cargo.toml  README.md
crates/nbt-snbt/examples/: cube_editor.rs  demo.rs
crates/nbt-snbt/src/: error.rs  lib.rs  parser.rs
crates/nbt-wasm/: Cargo.toml
crates/nbt-wasm/src/: lib.rs
libs/: Cargo.toml  README.md
libs/bench/: batch_processing_bench.rs  compression_bench.rs  editing_bench.rs  streaming_bench.rs
libs/examples/: create.rs  cube_modified.nbt  demo.rs  edit.rs  read.rs
libs/src/: compression.rs  error.rs  lib.rs  reader.rs  region.rs  snbt.rs  tag.rs  wasm.rs
libs/test/: tests.rs
