[workspace]
members = [
    "crates/nbt-core",
    "crates/nbt-compression",
    "crates/nbt-snbt",
    "crates/nbt-region",
    "crates/nbt-bench",
    # TODO: Add other crates as we create them
    # "crates/nbt-wasm",
]

resolver = "2"

[workspace.dependencies]
# Core dependencies - garde ça simple
thiserror = "1.0"
ahash = "0.8"

# Testing
criterion = "0.5"

# Optional features
flate2 = "1.0"
winnow = "0.5"
memmap2 = "0.9"
lru = "0.12"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
# Optimisation max pour performance
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
# Benchmarks précis
debug = true 