[workspace]
members = ["libs"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
ahash = "0.8"

# Testing
criterion = "0.5"

# Optional features
flate2 = "1.0"
winnow = "0.5"
memmap2 = "0.9"
lru = "0.12"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit
panic = "abort"        # Smaller panic handling
strip = true           # Strip debug symbols

[profile.bench]
# Benchmarks précis
debug = true 