[package]
name = "nbt"
version = "0.1.0" 
edition = "2021"
description = "Unified NBT library - Core types, compression, SNBT, regions, and WASM bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["compression", "snbt", "region"]
compression = ["flate2"]
snbt = ["winnow"]
region = ["compression"]
bench = []
  
[dependencies]
flate2 = { version = "1.0", optional = true }
winnow = { version = "0.5", optional = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "batch_processing_bench"
path = "bench/batch_processing_bench.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "editing_bench"
path = "bench/editing_bench.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "streaming_bench"
path = "bench/streaming_bench.rs"
harness = false
required-features = ["bench"] 

[[example]]
name = "cube_editor"
path = "examples/cube_editor.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"