[package]
name = "nbt-bench"
version = "0.1.0"
edition = "2021"
description = "Performance benchmarks for NBT-Rust"

[[bench]]
name = "streaming_bench"
path = "bench/streaming_bench.rs"
harness = false

[[bench]]
name = "batch_processing_bench"
path = "bench/batch_processing_bench.rs"
harness = false

[[bench]]
name = "editing_bench"
path = "bench/editing_bench.rs"
harness = false

[dependencies]
criterion = { workspace = true }
nbt-core = { path = "../nbt-core" }
nbt-compression = { path = "../nbt-compression" }
nbt-snbt = { path = "../nbt-snbt" } 