[package]
name = "nbt-snbt"
version = "0.1.0"
edition = "2021"
description = "Fast SNBT (String NBT) parser using winnow combinators"

[dependencies]
nbt-core = { path = "../nbt-core" }
nbt-compression = { path = "../nbt-compression" }
winnow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true } 