[package]
name = "nbt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
regex = "1.0"

# Local crates
nbt-core = { path = "../nbt-core" }
nbt-compression = { path = "../nbt-compression" }
nbt-region = { path = "../nbt-region" }
nbt-snbt = { path = "../nbt-snbt" }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort" 