[package]
name = "nbt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["compression"]
compression = ["nbt-compression/compression"]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# Local crates
nbt-core = { path = "../nbt-core" }
nbt-compression = { path = "../nbt-compression" }
nbt-region = { path = "../nbt-region" }
nbt-snbt = { path = "../nbt-snbt" }

[dependencies.getrandom]
version = "0.2"
features = ["js"] 