[package]
name = "nbt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["compression", "snbt", "region"]
compression = ["nbt-core/compression"]
snbt = ["nbt-core/snbt"]
region = ["nbt-core/region"]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# Unified core
nbt-core = { path = "../nbt-core", features = ["compression", "snbt", "region"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"] 